# advent_of_rust

./: .gitignore  Cargo.toml  README.md  fetch.sh  linux.txt  questions.txt  rust.txt  vim.txt
.github/workflows/: rust.yml
advent_of_python/src/: day_05.py
advent_of_python/utils/: test_utils.py
advent_of_rust/: Cargo.toml
advent_of_rust/benches/: dayfive.rs
advent_of_rust/src/: main.rs
benches/: dayfive.rs  my_benchmark.rs
notes/: rust.txt
src/: lib.rs  main.rs
