[package]
name = "advent_of_rust"
version = "0.1.0"
authors = ["JerryDot <dansinh64@gmail.com>"]
edition = "2018"
default-run = "advent_of_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
regex = "1.4"
once_cell = "1.5"
bencher = "0.1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false